best_try_and_best_chance

--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -26,7 +26,7 @@
 <ul>
 <li><a href="#org4d2e173">1.1. 历史</a></li>
 <li><a href="#org706c080">1.2. 规范</a></li>
-<li><a href="#orgfe9d2e2">1.3. 其他</a>
+<li><a href="#org83ae4d4">1.3. 其他</a>
 <ul>
 <li><a href="#org13f3194">1.3.1. JIT vs AOT</a></li>
 </ul>
@@ -49,7 +49,7 @@
 </ul>
 </li>
 <li><a href="#org27e318c">5.6. 用户自定义控件</a></li>
-<li><a href="#org83ae4d4">5.7. 其他</a>
+<li><a href="#orgd8ec257">5.7. 其他</a>
 <ul>
 <li><a href="#org3ed183e">5.7.1. 路由 (Route)</a></li>
 <li><a href="#orgbb2d469">5.7.2. 捆绑 (Bundle)</a></li>
@@ -63,7 +63,7 @@
 <ul>
 <li><a href="#orgf24ab64">6.1. MVC</a></li>
 <li><a href="#orgc171ad9">6.2. Lifecycle</a></li>
-<li><a href="#orga5a9114">6.3. Action</a></li>
+<li><a href="#org2c27534">6.3. Action</a></li>
 <li><a href="#org592c73d">6.4. Razor</a></li>
 <li><a href="#org946e302">6.5. Binding/Validation</a></li>
 <li><a href="#orgc3a6654">6.6. Filter</a></li>
@@ -74,7 +74,7 @@
 <li><a href="#orge8f9cc3">7.1. JSON</a></li>
 <li><a href="#org680ebb4">7.2. WebApiConfig.cs</a></li>
 <li><a href="#orgaf1b1de">7.3. Router</a></li>
-<li><a href="#org2c27534">7.4. Action</a></li>
+<li><a href="#org727ab03">7.4. Action</a></li>
 <li><a href="#orgb8b8cf9">7.5. Help</a></li>
 </ul>
 </li>
@@ -116,7 +116,7 @@
 <li><a href="#orgcbf2bf2">9.2. Summary</a></li>
 </ul>
 </li>
-<li><a href="#org9660500">10. RESTFul/GraphQL</a></li>
+<li><a href="#org9ef3dd5">10. RESTful/GraphQL</a></li>
 </ul>
 </div>
 </nav>
@@ -207,8 +207,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgfe9d2e2" class="outline-3">
-<h3 id="orgfe9d2e2"><span class="section-number-3">1.3.</span> 其他</h3>
+<div id="outline-container-org83ae4d4" class="outline-3">
+<h3 id="org83ae4d4"><span class="section-number-3">1.3.</span> 其他</h3>
 <div class="outline-text-3" id="text-1-3">
 </div>
 <div id="outline-container-org13f3194" class="outline-4">
@@ -576,7 +576,7 @@ Global.asax:
 <h3 id="orgeca96eb"><span class="section-number-3">5.3.</span> Page 的生命周期</h3>
 <div class="outline-text-3" id="text-5-3">
 
-<figure id="org872a01e">
+<figure id="orgb5ccf3a">
 <img src="img/oimg_20220928_005325.png" alt="oimg_20220928_005325.png">
 
 </figure>
@@ -766,7 +766,7 @@ Unload:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="org783e1bd">
+<pre class="example" id="orga50f50f">
 ----------------------    -------
 | .                  |    | 验证 |
 ----------------------    -------
@@ -823,7 +823,7 @@ Code Action Task:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="orgc861471">
+<pre class="example" id="org98a0bee">
 在页面中，显示:
 : 这是本页面在 Page 生命中，被访问的第 N 次。
 
@@ -1042,8 +1042,8 @@ studentsGV.<span style="color: #721045;">DataBind</span><span style="color: #000
 </div>
 </div>
 
-<div id="outline-container-org83ae4d4" class="outline-3">
-<h3 id="org83ae4d4"><span class="section-number-3">5.7.</span> 其他</h3>
+<div id="outline-container-orgd8ec257" class="outline-3">
+<h3 id="orgd8ec257"><span class="section-number-3">5.7.</span> 其他</h3>
 <div class="outline-text-3" id="text-5-7">
 </div>
 <div id="outline-container-org3ed183e" class="outline-4">
@@ -1150,7 +1150,7 @@ ASP.NET MVC:
 <h3 id="orgc171ad9"><span class="section-number-3">6.2.</span> Lifecycle</h3>
 <div class="outline-text-3" id="text-6-2">
 
-<figure id="org9659b64">
+<figure id="org4a03f3a">
 <img src="img/mvc-lifecycle.png" alt="mvc-lifecycle.png">
 
 </figure>
@@ -1229,8 +1229,8 @@ controller.<span style="color: #721045;">Execute</span><span style="color: #0000
 </div>
 </div>
 
-<div id="outline-container-orga5a9114" class="outline-3">
-<h3 id="orga5a9114"><span class="section-number-3">6.3.</span> Action</h3>
+<div id="outline-container-org2c27534" class="outline-3">
+<h3 id="org2c27534"><span class="section-number-3">6.3.</span> Action</h3>
 <div class="outline-text-3" id="text-6-3">
 <ul class="org-ul">
 <li>Action 是 Controller 里面用来处理请求产生响应的一个方法</li>
@@ -1468,8 +1468,8 @@ api/{controller}/{id}
 </div>
 </div>
 
-<div id="outline-container-org2c27534" class="outline-3">
-<h3 id="org2c27534"><span class="section-number-3">7.4.</span> Action</h3>
+<div id="outline-container-org727ab03" class="outline-3">
+<h3 id="org727ab03"><span class="section-number-3">7.4.</span> Action</h3>
 <div class="outline-text-3" id="text-7-4">
 <p>
 方法名字 vs 请求方法:
@@ -2445,8 +2445,8 @@ dotnet package add Microsoft.EntityFrameworkCore.Tools
 </div>
 </section>
 
-<section id="outline-container-org9660500" class="outline-2">
-<h2 id="org9660500"><span class="section-number-2">10.</span> RESTFul/GraphQL</h2>
+<section id="outline-container-org9ef3dd5" class="outline-2">
+<h2 id="org9ef3dd5"><span class="section-number-2">10.</span> RESTful/GraphQL</h2>
 <div class="outline-text-2" id="text-10">
 <p>
 RESTful (Representational State Transfer)，表现层状态转换:
