--- a/html/.sitemap.html
+++ b/html/.sitemap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-02-22 -->
+<!-- 2023-02-27 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Sitemap for project _notes_yao63</title>
@@ -22,9 +22,9 @@
 <li><a href="index.html">173.NET</a></li>
 <li>111
 <ul class="org-ul">
-<li><a href="111/english.html">English</a></li>
 <li><a href="111/notes.html">Tips</a></li>
 <li><a href="111/tasks.html">任务和作业</a></li>
+<li><a href="111/words.html">English</a></li>
 </ul></li>
 <li>database
 <ul class="org-ul">
@@ -42,9 +42,14 @@
 <li>frontend
 <ul class="org-ul">
 <li><a href="frontend/0-http.html">HTTP</a></li>
-<li><a href="frontend/1-html+css.html">HTML/CSS</a></li>
-<li><a href="frontend/2-javascript.html">JavaScript</a></li>
-<li><a href="frontend/3-openapi.html">OpenAPI/Swagger</a></li>
+<li><a href="frontend/a-html+css.html">HTML/CSS</a></li>
+<li><a href="frontend/c_js.html">JavaScript (ECMAScript)</a></li>
+<li><a href="frontend/d_bom.html">BOM (浏览器对象模型)</a></li>
+<li><a href="frontend/e_dom.html">DOM (文档对象模型)</a></li>
+<li><a href="frontend/h_jQuery.html">jQuery</a></li>
+<li><a href="frontend/n_vue-js.html">Vue.js</a></li>
+<li><a href="frontend/w_nodejs.html">Node.js</a></li>
+<li><a href="frontend/z-openapi.html">OpenAPI/Swagger</a></li>
 </ul></li>
 <li>miscellaneous
 <ul class="org-ul">
@@ -55,7 +60,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-02-22</p>
+<p class="date">Created: 2023-02-27</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
