best_try_and_best_chance

--- a/html/frontend/h_jQuery.html
+++ b/html/frontend/h_jQuery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-02-27 -->
+<!-- 2023-02-28 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>jQuery</title>
@@ -189,7 +189,7 @@ Content Delivery Network，内容分发网络。
 </p>
 
 
-<figure id="org859feb1">
+<figure id="org7456699">
 <img src="./img/cdn.png" alt="cdn.png">
 
 </figure>
@@ -1035,7 +1035,7 @@ console.log<span style="color: #000000;">(</span>a<span style="color: #000000;">
 <div class="outline-text-2" id="text-10">
 <ul class="org-ul">
 <li>后台 admin 框架: <a href="https://www.cnblogs.com/Leo_wl/p/5791545.html">https://www.cnblogs.com/Leo_wl/p/5791545.html</a></li>
-<li><a href="https://www.layui.com/">https://www.layui.com/</a></li>
+<li><a href="http://layui.org.cn/">http://layui.org.cn/</a></li>
 </ul>
 </div>
 </section>
@@ -1056,7 +1056,7 @@ console.log<span style="color: #000000;">(</span>a<span style="color: #000000;">
 </p>
 
 
-<figure id="org190aae5">
+<figure id="org4d3e63c">
 <img src="img/todo-list.png" alt="todo-list.png" width="40%">
 
 </figure>
@@ -1185,7 +1185,7 @@ console.log<span style="color: #000000;">(</span>a<span style="color: #000000;">
 </p>
 
 
-<figure id="orgc5dd0ef">
+<figure id="org19ffbb6">
 <img src="img/todo-list-page.png" alt="todo-list-page.png" width="50%">
 
 </figure>
@@ -1818,7 +1818,7 @@ front:
 </p>
 
 
-<figure id="org6025bcf">
+<figure id="org2d3228d">
 <img src="img/todo-list-final.png" alt="todo-list-final.png" width="50%">
 
 </figure>
@@ -1829,7 +1829,7 @@ front:
 <section id="outline-container-org51dcb32" class="outline-2">
 <h2 id="org51dcb32"><span class="section-number-2">12.</span> [例] Checkbox 选择</h2>
 <div class="outline-text-2" id="text-12">
-<div class="div" id="org81aad27">
+<div class="div" id="orge72c9dc">
 <p>
 
 </p>
@@ -1976,7 +1976,7 @@ $<span style="color: #000000;">(</span><span style="color: #3548cf;">".btn5"</sp
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-02-27</p>
+<p class="date">Created: 2023-02-28</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
