best_try_and_best_chance

--- a/html/frontend/n_vue-js.html
+++ b/html/frontend/n_vue-js.html
@@ -887,6 +887,10 @@ data.js 用于提供共享数据:
 <h4 id="org7e2c3f9"><span class="section-number-4">5.2.3.</span> Vuex</h4>
 <div class="outline-text-4" id="text-5-2-3">
 <p>
+<a href="https://vuex.vuejs.org/zh/">https://vuex.vuejs.org/zh/</a>
+</p>
+
+<p>
 在网页中添加引用即可使用 Vuex:
 </p>
 <div class="org-src-container">
@@ -1703,7 +1707,7 @@ vue.config.js:
 </p>
 
 
-<figure id="orgf3900c7">
+<figure id="orgfeddd20">
 <img src="img/oimg_20201104_064733.png" alt="oimg_20201104_064733.png" width="300px">
 
 </figure>
@@ -2562,7 +2566,7 @@ npm run serve                <span style="color: #595959;"># </span><span style=
 为什么会有如下错误:
 </p>
 
-<pre class="example" id="org2cae0cf">
+<pre class="example" id="orge8faf60">
 Access to XMLHttpRequest at 'http://localhost:9999/server_comment_list_war_exploded/comments' from origin 'http://localhost:8080' has been blocked by CORS policy: No 'Access-Control-Allow-Origin' header is present on the requested resource.
 </pre>
 
